# Skydimo-MVP

./: CMakeLists.txt  ter
10_LVGL_V9_Test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
10_LVGL_V9_Test/components/button_bsp/: CMakeLists.txt  button_bsp.c  button_bsp.h
10_LVGL_V9_Test/components/i2c_bsp/: CMakeLists.txt  i2c_bsp.c  i2c_bsp.h
10_LVGL_V9_Test/components/lcd_bl_pwm_bsp/: CMakeLists.txt  lcd_bl_pwm_bsp.c  lcd_bl_pwm_bsp.h
10_LVGL_V9_Test/components/lcd_driver/: CMakeLists.txt  lcd_driver.c  lcd_driver.h
10_LVGL_V9_Test/components/lv_port/: CMakeLists.txt  lv_port.c  lv_port.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
10_LVGL_V9_Test/components/mode_manager/: CMakeLists.txt  mode_manager.c  mode_manager.h
10_LVGL_V9_Test/main/: CMakeLists.txt  idf_component.yml  main.c  user_config.h
11_FactoryProgram/: CMakeLists.txt  sdkconfig
11_FactoryProgram/components/button_bsp/: CMakeLists.txt  button_bsp.c
11_FactoryProgram/components/user_app/: CMakeLists.txt  mode_manager.c  mode_manager.h  user_app.cpp  user_app.h
11_FactoryProgram/main/: idf_component.yml  main.cpp  user_config.h
ESP32_Projects/ESP32_Screen_System/: CMakeLists.txt  idf_component.yml  sdkconfig  sdkconfig.old
ESP32_Projects/ESP32_Screen_System/components/lvgl_ports/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
ESP32_Projects/ESP32_Screen_System/main/: CMakeLists.txt  idf_component.yml  key.h  key_driver.c  key_driver.h  lv_conf.h  main.c  ui_mode.c  ui_mode.h  user_config.h
ESP32_Projects/Skydimo_T1/: CMakeLists.txt  idf_component.yml  sdkconfig.defaults
ESP32_Projects/Skydimo_T1/main/: CMakeLists.txt  button.c  button.h  debug_fix.bat  debug_fix2.bat  i2c_bsp.c  i2c_bsp.h  key_detector.c  key_detector.h  lcd_touch.c  lcd_touch.h  lv_conf.h  main.c  mode_manager.c  mode_manager.h  ui_manager.c  ui_manager.h  ui_port.c  ui_port.h  user_config.h
Project/Skydimo_T1/: CMakeLists.txt
Project/Skydimo_T1/main/: CMakeLists.txt  button.c  button.h  lcd_touch.c  main.c  mode_manager.c  mode_manager.h  ui_port.c  ui_port.h
components/button_bsp/: CMakeLists.txt  button_bsp.c  button_bsp.h  multi_button.c  multi_button.h
components/captive_portal_bsp/: CMakeLists.txt  captive_portal_bsp.c  captive_portal_bsp.h  idf_component.yml
components/device_discovery_bsp/: device_discovery_bsp.h
components/device_report_bsp/: CMakeLists.txt  device_report_bsp.c  device_report_bsp.h
components/i2c_bsp/: CMakeLists.txt  i2c_bsp.c  i2c_bsp.h
components/lcd_bl_pwm_bsp/: CMakeLists.txt  lcd_bl_pwm_bsp.c  lcd_bl_pwm_bsp.h
components/wifi_provision_bsp/: CMakeLists.txt  wifi_provision_bsp.c  wifi_provision_bsp.h
examples/examples/: sdkconfig.defaults
main/: CMakeLists.txt  app_mode.c  app_mode.h  main.c  ui_screens.c  ui_screens.h  user_config.h
skydimo-lcd/: CMakeLists.txt  sdkconfig
skydimo-lcd/components/input_handler/: CMakeLists.txt  input_handler.c  input_handler.h
skydimo-lcd/components/lcd_driver/: CMakeLists.txt  esp_lcd_axs15231b.c  esp_lcd_axs15231b.h  esp_lcd_touch.h
skydimo-lcd/components/ui_manager/: CMakeLists.txt  ui_manager.c  ui_manager.h
skydimo-lcd/main/: CMakeLists.txt  lv_conf.h  main.c  system_config.h
tools/: device_listener.py  serial_listener.py
